# dirstat-rs-benchmark

./: Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yaml
benches/: benchmark.rs
